# poker-planning

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  README.md  cypress.config.js  database.rules.json  firebase.json  firestore.rules  jest.config.js  jest.setup.js  middleware.ts  next-i18next.config.js  next.config.ts  package-lock.json  package.json
backend/: .env.example  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: billing.py  health.py  rooms.py  webhooks.py
backend/app/core/: settings.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/domain/: plans.py
backend/app/schemas/: billing.py  rooms.py
backend/app/services/: auth_service.py  billing_service.py  entitlements.py  room_service.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_billing_api.py  test_billing_migrations.py  test_room_entitlements.py  test_rooms_api.py
docs/: about.md  billing-stripe-roadmap.md  roles-and-permissions.md  troubleshooting.md  user-guide.md
public/: ads.txt  paypal-enterprise-annual-subscription-en-dark.html  paypal-enterprise-annual-subscription-en.html  paypal-enterprise-annual-subscription-es-dark.html  paypal-enterprise-annual-subscription-es.html  paypal-enterprise-annual-subscription.html  paypal-enterprise-subscription-en-dark.html  paypal-enterprise-subscription-en.html  paypal-enterprise-subscription-es-dark.html  paypal-enterprise-subscription-es.html  paypal-enterprise-subscription.html  paypal-pro-subscription.html  (+10 more)
(+222 files in other folders)
