[project]
name = "poker-planning-billing-api"
version = "0.1.0"
description = "FastAPI billing authority for Poker Planning"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "stripe>=10.0,<13.0",
  "firebase-admin>=6.5,<7.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "httpx>=0.27,<1.0", "ruff>=0.6,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
